src/test/deca/context/valid/SansObjet/DeclVar-Minus-float-float-float.deca
// Description:
//    Declaration of a float variable using - operation between a float variable and float .
// 
// Results:
//     nothing
// 
// Historique: 
//    cree le 11/01/2022 

{
    float x =  2.5; 
    float y = 1.5; 
    float z = 2.5 - 1.5; 
}
