src/test/deca/context/invalid/SansObjet/DeclVar-Minus-float-string-string.deca
// Description:
//    Declaration of a float variable using - operation between a string variable and string .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.33) Illegal operand type.
// 
// Historique: 
//    cree le 11/01/2022 

{
    string x =  "World"; 
    string y = "Hello"; 
    float z = "World" - "Hello"; 
}
